tests/ui/traits/winnowing/global-non-global-env-4.current.stderr
error[E0308]: mismatched types
  --> $DIR/global-non-global-env-4.rs:21:5
   |
LL | fn foo<T>() -> u32
   |        -       --- expected `u32` because of return type
   |        |
   |        found this type parameter
...
LL |     impls_trait(())
   |     ^^^^^^^^^^^^^^^ expected `u32`, found type parameter `T`
   |
   = note:        expected type `u32`
           found type parameter `T`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
